[tool.poetry]
name = "ztflc"
version = "0.3.2"
description = "Perform force photometry fits of ZTF lightcurves"
authors = ["Mickael Rigault <m.rigault@ipnl.in2p3.fr>", "Simeon Reusch <simeon.reusch@desy.de>"]
maintainers = ["Mickael Rigault <m.rigault@ipnl.in2p3.fr>", "Simeon Reusch <simeon.reusch@desy.de>"]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
]
keywords = ["astrophysics", "science", "astronomy", "ZTF", "photometry"]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
astropy = "^5.2.1"
iminuit = "^2.20.0"
tqdm = "^4.64.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
